[package]
name = "loadbalancer"
version = "0.1.0"
authors = ["Jake Armendariz <jakearmendariz99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
json = "*"
rocket_contrib = "0.4.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"