[package]
name = "loadbalancer"
version = "0.1.0"
authors = ["Jake Armendariz <jakearmendariz99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
json = "*"
rocket_contrib = { version = "0.4.6", features = ["handlebars_templates", "tera_templates"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.3"
rust-crypto = "^0.2"
sha-1 = "0.9.3"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13.0"
lazy_static = "1.4.0"
